REL-115106 Option to change field names on export - UI -  "Rename" button layout

--- a/Source/kCura.IntegrationPoints.Web/Content/Site.css
+++ b/Source/kCura.IntegrationPoints.Web/Content/Site.css
@@ -334,22 +334,16 @@ ul li .day-select
 	min-width: 1250px;
 }
 
-.selection , .selection-rename, .selection-dbl-padding
+.selection , .selection-rename
 {
 	vertical-align: middle;
 	padding-right: 17px;
 	padding-left: 17px;
 }
 
-.selection-dbl-padding
-{
-	text-align: center;
-    padding-right: 34px;
-	padding-left: 34px;
-}
-
 .selection-rename
 {
+	vertical-align: top;
 	text-align: center;
 }
 
