Images toggle on, copy files to repository label added

--- a/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationMapFields.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationMapFields.cshtml
@@ -84,7 +84,7 @@
 							</div>
 						</div>
 						<div class="field-row" data-bind="visible: isDocument() == 'true'">
-							<div class="field-label required ">Copy Native File:</div>
+							<div class="field-label required " data-bind="text: copyNativeLabel"></div>
 							<div class="field-value">
 								<ul>
 									<li>
