--- a/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationMapFields.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationMapFields.cshtml
@@ -83,7 +83,7 @@
 								</ul>
 							</div>
 						</div>
-						<div class="field-row"  data-bind="visible: ImageImport() == 'true'">
+						<div class="field-row" data-bind="visible: ImageImport() == 'true'">
 							<div class="field-label required">
 								Image Precedence:
 							</div>
@@ -96,9 +96,8 @@
 								Production Precedence:
 							</div>
 							<div class="field-value">
-								<label id="image-production-selection" data-bind="text: ImagePrecedenceSelection"></label>
-								<button id="image-production-precedence-button" data-bind="click: openImageProductionPicker" class="actionButtonSmall">...</button>
-								<input id="image-production-precedence-input" data-bind="value: ImagePrecedence, visible: false" />
+								<label id="image-production-selection" data-bind="style: { color: ImagePrecedence().length > 0 ? 'black' : 'darkblue' },text: ImagePrecedenceSelection"></label>
+								<button id="image-production-precedence-button" style="vertical-align: top" data-bind="click: openImageProductionPicker" class="actionButtonSmall">...</button>
 							</div>
 						</div>
 						<div class="field-row" data-bind="visible: isDocument() == 'true'">
