--- a/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
@@ -220,7 +220,7 @@
 										<select id="exportNativeWithFilenameFromTypeSelector" data-bind="enable: !HasBeenRun(), options: ExportEnums.ExportNativeWithFilenameFromTypes, optionsCaption: 'Select...', optionsText: 'key', optionsValue: 'value', value: SelectedExportNativesWithFileNameFrom, select2: {}"></select>
 									</div>
 								</div>
-								@*<div class="field-row" data-bind="with: exportFileNameViewModel">
+								<div class="field-row" data-bind="with: exportFileNameViewModel">
 									<div class="field-label">
 										File Name:
 									</div>
@@ -235,7 +235,7 @@
 									<div class="field-value">
 										<button id="del-file-name-selection-button" class="actionButtonSmall" data-bind="click: removeNewSelection">-</button>
 									</div>
-								</div>*@
+								</div>
 								
 								<div class="field-row">
 									<div class="field-label">
