--- a/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/RelativityProviderConfiguration.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/RelativityProviderConfiguration.cshtml
@@ -1,31 +1,31 @@
 ﻿
 @{
-    ViewBag.Title = "Settings";
+	ViewBag.Title = "Settings";
 }
 <link href="~/Content/themes/default/style.min.css" rel="stylesheet" />
 <link href="~/Content/jstree-fluid.css" rel="stylesheet" />
 <link href="~/Content/buttermilk.9_2.min.css" rel="stylesheet" />
 <div id="_main">
-    <div id="relativityProviderConfiguration" style="min-width: 900px;">
-        <div class="card">
-            <span class="label">Source</span>
-            <table style="width: 100%;">
-                <tr>
-                    <td style="width: 48%;">
-                        <div class="field-row">
-                            <div class="field-label required">
-                                Saved Search :
-                            </div>
-                            <div class="field-value">
-                                <select id="savedSearchSelector" data-bind="options: savedSearches, optionsText: 'displayName', optionsValue: 'value', value: SavedSearchArtifactId,  optionsCaption: 'Select...', select2searchable: {}"></select>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-            </table>
-        </div>
-        <div class="card">
-            <span class="label">Destination</span>
+	<div id="relativityProviderConfiguration" style="min-width: 900px;">
+		<div class="card">
+			<span class="label">Source</span>
+			<table style="width: 100%;">
+				<tr>
+					<td style="width: 48%;">
+						<div class="field-row">
+							<div class="field-label required">
+								Saved Search :
+							</div>
+							<div class="field-value">
+								<select id="savedSearchSelector" data-bind="options: savedSearches, optionsText: 'displayName', optionsValue: 'value', value: SavedSearchArtifactId,  optionsCaption: 'Select...', select2searchable: {}"></select>
+							</div>
+						</div>
+					</td>
+				</tr>
+			</table>
+		</div>
+		<div class="card">
+			<span class="label">Destination</span>
 			<table style="width: 100%;">
 				<tr>
 					<td style="width: 48%;">
@@ -75,25 +75,25 @@
 						<div class="field-row">
 							<div class="field-label">Destination Production Set:</div>
 							<div class="field-value">
-								<select id="productionSetsSelector" data-bind="options: ProductionSets, optionsText: 'displayName', optionsValue: 'artifactID', optionsCaption: 'None', value: ProductionArtifactId,  select2: {}"></select>
+								<select id="productionSetsSelector" data-bind="options: ProductionSets, optionsText: 'displayName', optionsValue: 'artifactID', optionsCaption: 'None', value: ProductionArtifactId,  select2searchable: {}"></select>
 							</div>
 						</div>
 					</td>
 				</tr>
 			</table>
-        </div>
-    </div>
+		</div>
+	</div>
 </div>
 
 @section scripts
 {
-    <script src="~/Scripts/core/data.js"></script>
-    <script src="~/Scripts/core/utils.js"></script>
-    <script src="~/Scripts/knockout-3.4.0.js"></script>
-    <script src="~/Scripts/knockout.validation.js"></script>
-    <script src="~/Scripts/jstree.min.js"></script>
-    <script src="~/Scripts/export/location-jstree-selector.js"></script>
-    <script src="~/Scripts/integration-point/binding.js"></script>
-    <script src="~/Scripts/integration-point/picker.js"></script>
-    <script src="~/Scripts/RelativityProvider/Relativity-provider.js"></script>
+	<script src="~/Scripts/core/data.js"></script>
+	<script src="~/Scripts/core/utils.js"></script>
+	<script src="~/Scripts/knockout-3.4.0.js"></script>
+	<script src="~/Scripts/knockout.validation.js"></script>
+	<script src="~/Scripts/jstree.min.js"></script>
+	<script src="~/Scripts/export/location-jstree-selector.js"></script>
+	<script src="~/Scripts/integration-point/binding.js"></script>
+	<script src="~/Scripts/integration-point/picker.js"></script>
+	<script src="~/Scripts/RelativityProvider/Relativity-provider.js"></script>
 }
