--- a/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationMapFields.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationMapFields.cshtml
@@ -70,7 +70,7 @@
 								<select id="overlay-field-behavior" data-bind="options: MultiSelectFieldOverlayBehaviors, value: FieldOverlayBehavior, select2: {}"></select>
 							</div>
 						</div>
-						<div class="field-row" data-bind="visible: isDocument() == 'true' && ImageImportToggle()  == true">
+						<div class="field-row" id="CopyImages" data-bind="visible: ImageImportVisible()  == true">
 							<div class="field-label required">Copy Images:</div>
 							<div class="field-value">
 								<ul>
@@ -83,7 +83,7 @@
 								</ul>
 							</div>
 						</div>
-						<div class="field-row" data-bind="visible: ImageImport() == 'true'">
+						<div class="field-row" data-bind="visible:ImageImportVisible()  == true && ImageImport() == 'true'">
 							<div class="field-label required">
 								Image Precedence:
 							</div>
@@ -91,7 +91,7 @@
 								<select id="image-production-precedence" data-bind="options: ExportEnums.ProductionPrecedenceType, optionsText: 'key', optionsValue: 'value', value: ProductionPrecedence, select2: {}"></select>
 							</div>
 						</div>
-						<div class="field-row" data-bind="visible: IsProductionPrecedenceSelected()">
+						<div class="field-row" data-bind="visible:ImageImportVisible()  == true && IsProductionPrecedenceSelected()  && ImageImport() == 'true'">
 							<div class="field-label required">
 								Production Precedence:
 							</div>
