REL-133845 - Field pickers style is now based on it's type

--- a/Source/kCura.IntegrationPoints.Web/Content/Site.css
+++ b/Source/kCura.IntegrationPoints.Web/Content/Site.css
@@ -570,3 +570,13 @@ select option {
 .longTextField {
 	word-wrap: break-word;
 }
+
+.fileNamingType_field {
+	width: 150px !important;	
+	min-width: 0 !important;
+}
+
+.fileNamingType_separator {
+	min-width: 0 !important;
+	width: 75px !important;	
+}
