--- a/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
@@ -224,9 +224,9 @@
 									<div class="field-label">
 										File Name:
 									</div>
-									<div class="field-value">
+									<div class="field-value" id="fileNamingContainer">
 										<div data-bind="foreach: metaData">
-											<select data-bind="value: $parent.data()[$data], options: $parent.listData()[$data], optionsText: 'name', optionsValue: 'value', optionsCaption: 'Select...', select2: {}"/>
+											<select data-bind="value: $parent.data()[$data], options: $parent.listData()[$data], optionsText: 'name', optionsValue: 'value', optionsCaption: 'Select...', select2: {}"></select>
 										</div>
 									</div>
 									<div class="field-value">
