--- a/Source/kCura.IntegrationPoints.Web/Content/select2-overrides.css
+++ b/Source/kCura.IntegrationPoints.Web/Content/select2-overrides.css
@@ -159,12 +159,13 @@
 
 .select2-container.filter-container span.icon-chevron-down,
 .select2-container.subgrid-filter-container span.icon-chevron-down {
-  display: inline-block;
-  width: 15%;
-  max-width: 20px;
-  text-align: center;
-  float: right;
-  border-left: 1px solid  #807e7e; }
+	display: inline-block;
+	width: 20px;
+	text-align: center;
+	position: absolute;
+	right: 0;
+	top: 0;
+	border-left: 1px solid  #807e7e; }
 
 .select2-container.filter-container.picker-select-container span.icon-chevron-down {
   background-color: #e6e6e6; }
