--- a/Source/kCura.IntegrationPoints.Web/Content/select2-overrides.scss
+++ b/Source/kCura.IntegrationPoints.Web/Content/select2-overrides.scss
@@ -206,12 +206,14 @@
 .select2-container.subgrid-filter-container span.icon-chevron-down
 {
 	display: inline-block;
-	width: 15%;
-	max-width: 20px;
+	width: 20px;
 	text-align: center;
-	float: right;
+	position: absolute;
+	right: 0;
+	top: 0;
 	border-left: 1px solid  #807e7e;
 }
+
 .select2-container.filter-container.picker-select-container span.icon-chevron-down {
 	background-color: #e6e6e6;
 }
