--- a/source/kCura.IntegrationPoints.Web/Content/select2search.css
+++ b/source/kCura.IntegrationPoints.Web/Content/select2search.css
@@ -27,7 +27,7 @@ Version: 3.5.1 Timestamp: Tue Jul 22 18:58:56 EDT 2014
 	display: block;
 }
 
-.select2-container, .select2-container.select2-container-active, .select2-container.select2-dropdown-open, .select2-drop {
+.select2-container, .select2-container.select2-container-active, .select2-container.select2-dropdown-open {
 	font-size: 11px;	
 	min-width: 218px;
 }
