Added missing statements removed during merge

--- a/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
@@ -226,7 +226,7 @@
 									</div>
 									<div class="field-value" id="fileNamingContainer">
 										<div data-bind="foreach: metaData">
-											<select data-bind="attr: { id: 'fileName-select-' + $index() }, value: $parent.data()[$data], options: $parent.listData()[$data], optionsText: 'name', optionsValue: 'value', optionsCaption: 'Select...', select2: {}"/>
+											<select data-bind="attr: { id: 'fileName-select-' + $index() }, value: $parent.data()[$data], options: $parent.listData()[$data], optionsText: 'name', optionsValue: 'value', optionsCaption: 'Select...', select2searchable: {}"/>
 										</div>
 									</div>
 									<div class="field-value">
