--- a/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
@@ -232,10 +232,10 @@
 										</div>
 									</div>
 									<div class="field-value" data-bind="visible: !$parent.HasBeenRun()">
-										<button id="add-file-name-selection-button" class="actionButtonSmall" data-bind="click: addNewSelection, visible: addButtonVisible()">+</button>
+										<button id="add-file-name-selection-button" class="actionButtonSmall fileNaming-controlButtons" data-bind="click: addNewSelection, visible: addButtonVisible()">+</button>
 									</div>	
 									<div class="field-value" data-bind="visible: !$parent.HasBeenRun()">
-										<button id="del-file-name-selection-button" class="actionButtonSmall" data-bind="click: removeNewSelection, visible: delButtonVisible()">-</button>
+										<button id="del-file-name-selection-button" class="actionButtonSmall fileNaming-controlButtons" data-bind="click: removeNewSelection, visible: delButtonVisible()">-</button>
 									</div>
 								</div>
 								
