--- a/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
@@ -260,7 +260,7 @@
 										Production Precedence:
 									</div>
 									<div class="field-value">
-										<label id="image-production-selection" data-bind="style: { color: ImagePrecedence().length > 0 ? 'black' : 'darkblue' },text: ImagePrecedenceSelection"></label>
+										<label id="image-production-selection" class="precedence-selection" data-bind="style: { color: ImagePrecedence().length > 0 ? 'black' : 'darkblue' },text: ImagePrecedenceSelection"></label>
 										<button id="image-production-precedence-button" style="vertical-align: top" data-bind="click: openImageProductionPicker, disable: HasBeenRun()" class="actionButtonSmall">...</button>
 										<input id="image-production-precedence-input" data-bind="value: ImagePrecedence, visible: false" />
 									</div>
@@ -326,8 +326,8 @@
 										Text Precedence:
 									</div>
 									<div class="field-value">
-										<label id="text-precedence-selection" data-bind="text: TextPrecedenceSelection"></label>
-										<button id="text-precedence-button" data-bind="click: openTextPrecedencePicker, disable: HasBeenRun()" class="actionButtonSmall">...</button>
+										<label id="text-precedence-selection" class="precedence-selection" data-bind="style: { color: ImagePrecedence().length > 0 ? 'black' : 'darkblue' },text: TextPrecedenceSelection"></label>
+										<button id="text-precedence-button"  style="vertical-align: top" data-bind="click: openTextPrecedencePicker, disable: HasBeenRun()" class="actionButtonSmall">...</button>
 										<input id="text-precedence-input" data-bind="value: TextPrecedenceFields, visible: false" />
 									</div>
 								</div>
