REL-129206 IP Type radio button is active for edit

--- a/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationDetailsPartial.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationDetailsPartial.cshtml
@@ -20,7 +20,10 @@
 			</div>
 			<div class="field-value">
 				<ul id="isExportType" data-bind="foreach: integrationPointTypes">
-					<li><input type="radio" data-bind="value: artifactID, checked: $parent.type, attr: {id: 'isExportTypeRadio' + artifactID}" /><label data-bind="text: displayName, attr:{for: 'isExportTypeRadio'+artifactID}"></label></li>
+					<li>
+						<input type="radio" data-bind="value: artifactID, checked: $parent.type, attr: {id: 'isExportTypeRadio' + artifactID}, disable: $parent.isTypeDisabled" />
+						<label data-bind="text: displayName, attr:{for: 'isExportTypeRadio'+artifactID}"></label>
+					</li>
 				</ul>
 			</div>
 		</div>
