--- a/Source/kCura.IntegrationPoints.Web/Content/Site.css
+++ b/Source/kCura.IntegrationPoints.Web/Content/Site.css
@@ -579,6 +579,7 @@ select option {
    	max-width: 210px;
    	display: inline-block;
   	overflow: hidden;
+	text-overflow: ellipsis;
    	white-space: nowrap;
    	border-bottom: 1px solid #c1c1c1 !important;
    	margin-right: 5px;
