Fixing label issue

--- a/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
@@ -81,7 +81,7 @@
 								<div class="field-label" />
 								<div class="field-value middle-vertical-align">
 									<input id="create-export-directory-checkbox" type="checkbox" data-bind="disable: HasBeenRun(), checked: IsExportFolderCreationEnabled" class="middle-vertical-align">
-									<label for="create-export-directory-checkbox">Create Export Directory</label>
+									<label for="create-export-directory-checkbox">Create Export Folder</label>
 								</div>
 							</div>
 						</td>
